@@ -16,3 +16,10 @@ CREATE TABLE IF NOT EXISTS `tbl_tempsales` (
   `order_status` int(11) NOT NULL DEFAULT '0',
   `sales_type` enum('online','counter_sales') NOT NULL DEFAULT 'online'
 ) ENGINE=MyISAM AUTO_INCREMENT=0 DEFAULT CHARSET=latin1;
+
+
+CREATE TABLE `tbl_composition` (
+  `id` int(11) NOT NULL,
+  `composition` text NOT NULL,
+  `category` varchar(50) NOT NULL
+) ENGINE=InnoDB DEFAULT CHARSET=latin1;
